# server_stats

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.sample.yml  registration_sample.yaml  sizes.sh
.cargo/: config
.github/: FUNDING.yml
.github/workflows/: rust.yml  shiftleft-analysis.yml
assets/: Matrix_org.fset
assets/favicons/: browserconfig.xml
src/: appservice.rs  config.rs  errors.rs  main.rs  webpage.rs
src/bot/: mod.rs
src/database/: cache.rs  graph.rs  mod.rs
src/jobs/: mod.rs
src/matrix/: discover.rs  mod.rs
src/scraping/: mod.rs
src/webpage/: api.rs  sse.rs  ws.rs
templates/: 2d.html  ar.html  index.html  vr.html
webpage/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  server.ts  tsconfig.server.json
webpage/e2e/src/: app.e2e-spec.ts
webpage/src/: index.html  manifest.webmanifest  styles.scss
webpage/src/app/: api.service.ts  app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  app.server.module.ts  graph-websocket.service.spec.ts  graph-websocket.service.ts  window.service.ts
webpage/src/app/api/: api.component.html  api.component.ts
webpage/src/app/faq/: faq.component.html  faq.component.ts
webpage/src/app/link-finder/: link-finder.component.html  link-finder.component.spec.ts  link-finder.component.ts
webpage/src/app/room-list/: room-list.component.html  room-list.component.ts
webpage/src/app/space-finder/: space-finder.component.html  space-finder.component.spec.ts  space-finder.component.ts
webpage/src/app/three-d-graph/: three-d-graph.component.html  three-d-graph.component.scss  three-d-graph.component.spec.ts  three-d-graph.component.ts
webpage/src/assets/: Matrix_org.fset3  Matrix_org.iset  api_definition.yaml
webpage/src/assets/favicons/: manifest.json
