[package]
name = "server_stats"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb-client = "0.1.4"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio-cron-scheduler = "0.2.1"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
futures = "0.3.14"
trust-dns-resolver = { version = "0.20", features = ["dns-over-rustls"] }
regex = "1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
once_cell = "1.7.2"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
clap = "3.0.0-beta.2"

sled = {version = "0.34.6", features = ["compression"]}
multimap = "0.8.3"
bincode = "1.3.3"

url = "2.2.0"
serde_json = "1"
async-recursion = "0.3"
xxhash-rust = {version = "0.8.2", features = ["xxh3"]}

base64 = "0.13.0"
chrono = "0.4"
mime_guess = "2.0.3"
rand = "0.8.3"

warp = { version = "0.3", git = "https://github.com/seanmonstar/warp", rev = "ab313984df336847cb7bf406fb1c3978baaf3785", default-features = false, features = ["multipart", "websocket"] }
opentelemetry-prometheus = "0.7.0"
opentelemetry = "0.14.0"
prometheus = "0.12.0"

[dependencies.matrix-sdk]
#git = "https://github.com/matrix-org/matrix-rust-sdk"
#rev = "4c09c6272bb3636e20d99177357cd31b80a2c1bf"
path = "../matrix-rust-sdk/matrix_sdk"
features = ["appservice"]

[dependencies.matrix-sdk-appservice]
#git = "https://github.com/matrix-org/matrix-rust-sdk"
#rev = "4c09c6272bb3636e20d99177357cd31b80a2c1bf"
path = "../matrix-rust-sdk/matrix_sdk_appservice"
features = ["warp"]

[patch.crates-io]
warp = { version = "0.3", git = "https://github.com/seanmonstar/warp", rev = "ab313984df336847cb7bf406fb1c3978baaf3785", default-features = false, features = ["multipart", "websocket"] }

[build-dependencies]
walkdir = "2"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
# Use for cargo flamegraph
#debug = true
