[package]
name = "server_stats"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb-client = "0.1.4"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio-cron-scheduler = "0.2.1"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
futures = "0.3.14"
trust-dns-resolver = { version = "0.20", features = ["dns-over-rustls"] }
regex = "1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
once_cell = "1.7.2"
tracing = "0.1"
tracing-subscriber = {version="0.2",features=["json","registry"]}
tracing-futures = "0.2.4"
clap = "3.0.0-beta.2"

opentelemetry-jaeger = { version = "0.13", features = ["tokio","reqwest_collector_client","collector_client"] }

sled = {version = "0.34.6", features = ["compression"]}
multimap = "0.8.3"
bincode = "1.3.3"

url = "2.2.0"
serde_json = "1"
async-recursion = "0.3"
xxhash-rust = {version = "0.8.2", features = ["xxh3"]}

base64 = "0.13.0"
chrono = "0.4"
mime_guess = "2.0.3"
rand = "0.8.3"

warp = { version = "0.3", git = "https://github.com/MTRNord/warp", rev = "631ecab", default-features = false, features = ["multipart", "websocket","compression"] }
opentelemetry-prometheus = "0.7.0"
opentelemetry = { version = "0.14", features = ["rt-tokio"] }
prometheus = "0.12.0"
tracing-opentelemetry = "0.13.0"

[dependencies.matrix-sdk]
#git = "https://github.com/MTRNord/matrix-rust-sdk"
#branch = "MTRNord/server_stats_warp_upstream"
path = "../matrix-rust-sdk/matrix_sdk"
default-features = false
features = ["appservice", "sled_cryptostore", "sled_state_store", "require_auth_for_profile_requests", "rustls-tls"]

[dependencies.matrix-sdk-appservice]
#git = "https://github.com/MTRNord/matrix-rust-sdk"
#branch = "MTRNord/server_stats_warp_upstream"
path = "../matrix-rust-sdk/matrix_sdk_appservice"
features = ["warp"]

[patch.crates-io]
warp = { version = "0.3", git = "https://github.com/MTRNord/warp", rev = "631ecab", default-features = false, features = ["multipart", "websocket","compression"] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
# Use for cargo flamegraph
debug = true
